feat: 添加黑客松快速部署配置
- 添加快速部署脚本 deploy.sh
- 创建黑客松部署指南 QUICK_DEPLOY.md
- 配置 Next.js 支持静态导出
- 添加多种部署方式的 npm 脚本
- 支持 Vercel、Netlify、GitHub Pages 部署
- 优化构建配置，支持不同部署环境

--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next build && next export",
+    "deploy:static": "npm run export",
+    "deploy:vercel": "vercel --prod",
+    "deploy:netlify": "netlify deploy --prod --dir=out"
   },
   "dependencies": {
     "@reown/appkit": "^1.7.19",
