--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "export": "next build && next export",
-    "deploy:static": "npm run export",
+    "export": "next build",
+    "deploy:static": "npm run build",
     "deploy:vercel": "vercel --prod",
-    "deploy:netlify": "netlify deploy --prod --dir=out"
+    "deploy:netlify": "netlify deploy --prod --dir=out",
+    "deploy:surge": "npm run build && surge out",
+    "deploy:firebase": "npm run build && firebase deploy"
   },
   "dependencies": {
     "@reown/appkit": "^1.7.19",
