--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@web3modal/wagmi": "^5.1.11",
     "autoprefixer": "^10.0.1",
     "next": "15.4.6",
+    "pino-pretty": "^13.1.1",
     "postcss": "^8",
     "qrcode": "^1.5.3",
     "react": "^18",
