Fix deployment issues and rollback to browser storage
- Configure Next.js static export output directory to 'dist'
- Fix TypeScript type errors in CustomContractPayment and securityChecks
- Update deployment scripts and documentation
- Remove backend API routes, fully use browser localStorage
- Verify all third-party contract payment features working

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "export": "next build",
     "deploy:static": "npm run build",
     "deploy:vercel": "vercel --prod",
-    "deploy:netlify": "netlify deploy --prod --dir=out",
-    "deploy:surge": "npm run build && surge out",
+    "deploy:netlify": "netlify deploy --prod --dir=dist",
+    "deploy:surge": "npm run build && surge dist",
     "deploy:firebase": "npm run build && firebase deploy"
   },
   "dependencies": {
