feat: 完成 MonadPay 智能合约部署和前端集成
- 成功部署 MonadPay 合约到 Monad 测试网 (0x896ecD588cCe3b4F4D14E5c20620463b421EE2B6)
- 添加 Hardhat 配置和部署脚本
- 修复 Gas 费用和 ethers.js v6 兼容性问题
- 创建合约配置文件和部署信息记录
- 在前端主页添加部署状态显示
- 添加智能合约部署文档

--- a/package.json
+++ b/package.json
@@ -36,7 +36,11 @@
     "wagmi": "^2.16.3"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^6.1.0",
+    "@openzeppelin/contracts": "^5.4.0",
+    "dotenv": "^17.2.1",
     "eslint": "^8",
-    "eslint-config-next": "15.4.6"
+    "eslint-config-next": "15.4.6",
+    "hardhat": "^2.26.3"
   }
 }
