fix: 修复部署配置问题
- 修复 Web3Modal 项目 ID 配置，替换 demo-project-id 为临时 ID
- 修复 Vercel 部署配置，移除静态导出模式避免 routes-manifest.json 错误
- 更新 .env.local 和 .env.example 文件

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,6 @@
 {
-  "buildCommand": "npm install && STATIC_EXPORT=true npm run build",
-  "outputDirectory": "dist",
-  "installCommand": "npm install",
+  "framework": "nextjs",
+  "buildCommand": "npm run build",
   "devCommand": "npm run dev",
-  "framework": "nextjs"
+  "installCommand": "npm install"
 }
