--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,10 @@
 # 私钥 (不要提交到版本控制)
 PRIVATE_KEY=your_private_key_here
 
+# Reown (WalletConnect) 项目 ID
+# 从 https://cloud.reown.com 获取
+NEXT_PUBLIC_REOWN_PROJECT_ID=your_reown_project_id_here
+
 # Monad 网络 RPC URLs
 MONAD_TESTNET_RPC_URL=https://testnet-rpc.monad.xyz
 MONAD_MAINNET_RPC_URL=https://rpc.monad.xyz
